<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dégoton</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="identifiant">Identifiant</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="connection">VALIDER</string>
    <string name="PassOublie">Mot de passe oublié</string>
    <string name="inscription">Inscription</string>
    <string name="connectAvec">Se connecter avec :</string>
    <string name="natural_wall">Natural wall</string>
    <string name="color_baloons">Color baloons</string>
    <string name="lightning">Lightning</string>
    <string name="now">En ce moment...</string>
    <string name="slogan">Dégotez ce qu\'il vous faut quand il vous faut...</string>
    <string name="devise">€</string>
    <string name="pourcentage">% de réduction</string>
    <string name="nom">Nom :</string>
    <string name="mail">Mail :</string>
    <string name="prenom">Prénom :</string>
    <string name="dest_adresse">Adresse de destination: </string>
    <string name="map_it_title">égoton: itinéraire</string>

</resources>