<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/PassOublie"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/inscription"
        android:textSize="12sp" />

    <Button
        android:id="@+id/ButtonConnection"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPass"
        android:layout_alignRight="@+id/editTextPass"
        android:layout_below="@+id/editTextPass"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        android:onClick="Connection"
        android:text="@string/connection"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/textAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/identifiant"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/motDePasse"
        android:inputType="textPassword" />    

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textConnectAvec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/connectAvec"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:src="@drawable/googleplus" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:src="@drawable/facebook" />

            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:src="@drawable/twitter" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

</RelativeLayout>