<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView 
            android:id="@+id/textMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"/>
        
        <EditText
        android:id="@+id/editTextMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10" 
        android:inputType=""
        android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView 
            android:id="@+id/textNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom"/>
        
        <EditText
        android:id="@+id/editTextNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10" 
        android:inputType=""
        android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView 
            android:id="@+id/textPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prenom"/>
        
        <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10" 
        android:inputType=""
        android:hint=""/>
    </LinearLayout>
</LinearLayout>
